--- a/src/app/routes/alert/alert-template-maintenance/alert-template-maintenance.component.html
+++ b/src/app/routes/alert/alert-template-maintenance/alert-template-maintenance.component.html
@@ -34,10 +34,10 @@
         <nz-form-control [nzSpan]="18">
             <nz-select  nzAllowClear [(ngModel)]="currentAlertTemplate.type" [disabled]="!newAlertTemplate">
                 <nz-option
-                      *ngFor="let alertType of alertTypes | keys"
-                      [nzValue]="alertType.key"
-                      nzLabel="{{ 'ALERT-TYPE-' + alertType.key | i18n}}"
-                    ></nz-option>
+                    *ngFor="let alertType of alertTypeKeys"
+                    [nzValue]="alertType"
+                    nzLabel="{{ 'ALERT-TYPE-' + alertType | i18n}}"
+                ></nz-option>
           </nz-select> 
         </nz-form-control>
       </nz-form-item>
@@ -50,10 +50,10 @@
         <nz-form-control [nzSpan]="18">
             <nz-select  nzAllowClear [(ngModel)]="currentAlertTemplate.deliveryChannel" [disabled]="!newAlertTemplate">
                 <nz-option
-                          *ngFor="let alertDeliveryChannel of alertDeliveryChannels | keys"
-                      [nzValue]="alertDeliveryChannel.key"
-                      nzLabel="{{ 'ALERT-DELIVERY-CHANNEL-' + alertDeliveryChannel.key | i18n}}"
-                    ></nz-option>
+                  *ngFor="let alertDeliveryChannel of alertDeliveryChannelsKeys"
+                  [nzValue]="alertDeliveryChannel"
+                  nzLabel="{{ 'ALERT-DELIVERY-CHANNEL-' + alertDeliveryChannel | i18n}}"
+            ></nz-option>
           </nz-select> 
         </nz-form-control>
       </nz-form-item>
