--- a/src/app/routes/inbound/printing-receiving-lpn-label/printing-receiving-lpn-label.component.html
+++ b/src/app/routes/inbound/printing-receiving-lpn-label/printing-receiving-lpn-label.component.html
@@ -33,7 +33,7 @@
       </nz-descriptions-item>
     </nz-descriptions> 
     <nz-card nzType="inner"  *ngIf="currentReceipt" >
-        <st #receiptLineTable [data]="currentReceipt.receiptLines" [columns]="receiptLineTableColumns" 
+        <st #receiptLineTable [data]="currentReceipt?.receiptLines" [columns]="receiptLineTableColumns" 
         [scroll]="{ x: '1315px' }"  >
        
           <!--   attributeColumn colummn  -->  
