--- a/src/app/routes/inbound/customer-return/customer-return.component.html
+++ b/src/app/routes/inbound/customer-return/customer-return.component.html
@@ -23,10 +23,10 @@
           
           <nz-select  nzMode="multiple" formControlName="statusList" name="statusList">
             <nz-option
-              *ngFor="let status of receiptStatusList | keys"
-              [nzValue]="status.key"
-              nzLabel="{{ 'RECEIPT-STATUS-' + status.key | i18n}}"
-            ></nz-option>
+              *ngFor="let status of receiptStatusListKeys"
+              [nzValue]="status"
+              nzLabel="{{ 'RECEIPT-STATUS-' + status | i18n}}"
+            ></nz-option>
           </nz-select>
         </nz-form-control>
       </nz-form-item>
