--- a/src/app/routes/integration/tiktok-seller-shop-integration-configuration/tiktok-seller-shop-integration-configuration.component.html
+++ b/src/app/routes/integration/tiktok-seller-shop-integration-configuration/tiktok-seller-shop-integration-configuration.component.html
@@ -41,7 +41,8 @@
                                 {{ 'autoRefreshOrderTimeWindowInMinute' | i18n }}
                         </nz-form-label>
                     <nz-form-control [nzSpan]="12">                
-                        <nz-input-number [(ngModel)]="tiktokSellerShopIntegrationConfiguration.autoRefreshOrderTimeWindowInMinute"  [nzMin]="0" [nzMax]="65524" [nzStep]="1">
+                        <nz-input-number [(ngModel)]="tiktokSellerShopIntegrationConfiguration.autoRefreshOrderTimeWindowInMinute"  
+                            [nzMin]="0" [nzMax]="65524" [nzStep]="1">
                         </nz-input-number> 
                     </nz-form-control>
                     </nz-form-item>
